gap fixes

--- a/src/components/me/me.component.module.css
+++ b/src/components/me/me.component.module.css
@@ -1,7 +1,7 @@
 .container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 400px));
-  gap: 0 10%;
+  gap: 0 100px;
   justify-content: center;
   align-items: center;
   padding-top: 100px;
